apps/core-services/minio/ingress/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-dashboard
  namespace: core-services
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: core-services-strip-prefix@kubernetescrd
spec:
  tls:
  - secretName: cert-dev.skyloft.cc
  rules:
  - host: s3.dev.skyloft.cc
    http:
      paths:
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9001
